# practice_rye_uv

./: README.md  pyproject.toml
src/practice_rye_uv/: __init__.py  main.py
