[project]
name = "practice-rye-uv"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuji_matsunami", email = "" }
]
dependencies = [
    "flask>=3.0.3",
    "tensorflow>=2.16.1",
    "black>=24.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/practice_rye_uv"]
